# Machine-Learning-For-Finance

./: .gitignore  Makefile  inspect_data.py  pyproject.toml  requirements.txt  run_c2o.py
Final_Submission_Package_530/03_Code_Repository/: GIT_URL.txt  REPRODUCTION_INSTRUCTIONS.md  requirements.txt
Final_Submission_Package_606/02_QuantStats/: quantstats_250m.html
Final_Submission_Package_606/03_Code_Repository/: Makefile  README.md  pyproject.toml
Final_Submission_Package_606/03_Code_Repository/notebooks/: c2o_reproduction_walkthrough.ipynb
Final_Submission_Package_606/03_Code_Repository/outputs/baseline_archive/: baseline_readme.md
Final_Submission_Package_606/03_Code_Repository/src/c2o_strategy/: phase2.py
Final_Submission_Package_606/03_Code_Repository/tools/: build_corrected_report.py  model_family_robustness.py
Final_Submission_Package_607/03_Code_Repository/: README.md
Final_Submission_Package_608/03_Code_Repository/: README.md
outputs/: feature_weights.csv  ic_daily.csv  ic_lgbm_daily.csv  ic_regime.csv  ic_yearly.csv  lgbm_diagnostics.csv  sharpe_lo_corrected.csv  stress_windows_250m.csv  yearly_universe.parquet
outputs/baseline_archive/: daily_returns_250m.csv  daily_returns_50m.csv  quantstats_250m.html
outputs/current_champion_archive/: current_champion_readme.md  daily_returns_250m.csv  final_report.md  (+5 more)
report/: figures_used.md  final_report.html  innovation_declaration.md  report_missing_items.md
submission_package/: BRIEF_REQUIREMENT_MAP.md  FILE_MANIFEST.csv  FINAL_CHECK.md  PACKAGE_MISSING_FILES.md  SUBMISSION_README.md
(+84 files in other folders)
