[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "c2o-strategy"
version = "0.1.0"
description = "Close-to-open overnight equity strategy coursework pipeline"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=12",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "quantstats>=0.0.62",
  "scikit-learn>=1.2",
  "lightgbm>=4.0",
  "beautifulsoup4>=4.12",
  "pypdf>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
